--- a/src/components/DialogPrompt/DialogPrompt.css
+++ b/src/components/DialogPrompt/DialogPrompt.css
@@ -1,22 +1,33 @@
-.DialogPrompt {
-    background-color: var(--background-color-dark);
+.DialogPrompt-wrapper {
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     margin: auto;
-    min-width: 300px;
-    min-height: 150px;
     border: 1px solid var(--border-color);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.383);
+    background-color: var(--background-color-dark);
     color: var(--text-color);
+}
+.DialogPrompt {
+    width: 300px;
+    min-height: 100px;
     display: flex;
     flex-direction: column;
 }
 .DialogPrompt h1 {
     font-size: 1.2em;
     margin-bottom: 0.5em;
+}
+.DialogPrompt .prompt-input {
+    outline: none;
+    border: none;
+    background: none;
+    color: var(--text-color);
+    background-color: var(--background-color-light);
+    padding: 0.5em;
+    margin: 0.5em;
 }
 .DialogPrompt .options {
     margin-top: auto;
