Updated Styles, mobile responsive

--- a/src/components/AuEditor/WelcomePage/WelcomePage.css
+++ b/src/components/AuEditor/WelcomePage/WelcomePage.css
@@ -52,3 +52,10 @@
         filter: hue-rotate(180deg);
     }
 }
+
+/* Small Screen */
+@media only screen and (max-width: 768px) {
+    .WelcomePage main {
+        flex-direction: column;
+    }
+}
