--- a/src/components/AuEditor/OpenPage/OpenPage.css
+++ b/src/components/AuEditor/OpenPage/OpenPage.css
@@ -16,8 +16,9 @@
     background-color: var(--background-color-light);
 }
 .OpenPage .search-bar {
-    display: flex;
     width: 50%;
+    display: flex;
+    justify-content: center;
     gap: 1em;
     padding-block: 15px;
     padding-inline: 20px;
@@ -31,6 +32,7 @@
     background: none;
     color: var(--text-color);
     text-align: center;
+    max-width: 80%;
 
     &::placeholder {
         color: rgb(183, 183, 183)
@@ -105,6 +107,7 @@
 
 .OpenPage .empty {
     width: 50%;
+    margin-block: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,6 +119,7 @@
 }
 .OpenPage .empty p {
     font-size: 2rem;
+    text-align: center;
 }
 
 .OpenPage .docs-list .file-wrapper {
