--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,13 +1,15 @@
 
 .Sidebar {
-    --_sidebar-dim: 43px;
-    width: var(--_sidebar-dim);
+    width: var(--sidebar-dim);
     background-color: var(--background-color-dark);
     border: 1px solid var(--border-color);
     color: var(--text-color);
+
     display: flex;
     align-items: center;
     justify-content: center;
+    /* overflow-x: visible;
+    overflow-y: auto; */
 }
 
 .options {
@@ -17,13 +19,20 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+}
+.Sidebar .IconButton {
+    width: var(--icons-dim);
+    height: var(--icons-dim);
 }
 
 @media only screen and (max-width: 768px) {
     .Sidebar {
         width: 100%;
         /* width: 100vw; */
-        /* height: var(--_sidebar-dim); */
+        height: var(--sidebar-dim);
+        overflow-x: auto;
+        overflow-y: visible;
     }
     .options {
         flex-direction: row;
